# detecting-italian-varieties

./: .gitignore  README.md  TRATTI.md  liste_VOC.txt  main.py  requirements.txt  setup.cfg  traits.yaml
div/: extractor.py  reader.py
