[metadata]
name = div
version = 0.1
author = Ludovica Pannitto
author_email = ludovica.pannitto@unibo.it
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = div
